# roborregos-rag

./: .gitignore  Arquitectura.txt  LANGCHAIN_SETUP.txt  README.md  commands.md  notes.txt
app/: embedding_model.py  indexing_strat.py  main.py  rag_pipeline.py
chroma_knowledge1_db/: chroma.sqlite3
chroma_knowledge2_db/: chroma.sqlite3
database/: vector_store.py
langchain/: ahh.py  caching.py  debug.py  debug_test_docs.py  functions.py  main.py  mega_test.py  minimal_test.py  raw.py  requirements.txt  simple_test.py  test.py  test2.py  test_caching.py  test_docs.py
langchain/docker/: docker-compose.yaml
ros2/: .dockerignore  Dockerfile  OLLAMA_SETUP.md  docker-compose.yml  init-ollama.sh
ros2/rag_interfaces/: CMakeLists.txt  package.xml
ros2/rag_interfaces/srv/: RAGQuery.srv
ros2/rag_service/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2/rag_service/launch/: rag_service_launch.py
ros2/rag_service/rag_service/: __init__.py  caching.py  rag_client.py  rag_client_example.py  rag_service_node.py
